<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="team_fav" type="id" />
    <item name="team_list" type="id" />

    <item name="league_list" type="id" />
    <item name="league_spinner" type="id" />
    <item name="league_name" type="id" />

    <item name="event_list" type="id" />
    <item name="event_list2" type="id" />

    <item name="player_name" type="id" />
    <item name="player_pos" type="id" />
    <item name="player_photo" type="id" />
</resources>