<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="Favorite"
        android:iconTint="@color/colorPrimary"
        app:showAsAction="always"
        android:visible="true"/>

    <item
        android:id="@+id/menu_unfav"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:iconTint="@color/colorPrimary"
        android:title="UnFavorite"
        app:showAsAction="always"
        android:visible="false"/>




</menu>
