<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_team"
        android:icon="@drawable/ic_trophy"
        android:iconTint="#fff"
        android:title="@string/menu_team"
        app:showAsAction="never"
        android:visible="true"/>


</menu>
